--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.1.2",
-    "express": "^4.16.3",
     "@material-ui/icons": "^3.0.1",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "lodash": "^4.17.11",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.4",
     "react": "^16.5.2",
