--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "mysql": "^2.16.0",
     "nodemon": "^1.18.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-facebook-login": "^4.1.1",
+    "react-moment": "^0.8.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4"
   },
